# SocketUtility

./: .gitignore  CMakeLists.txt  README.md  SocketUtilityC++.sln
.github/workflows/: ccpp.yml
SocketUtilityC++/: Async.cpp  Async.h  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  HttpServer.cpp  HttpServer.h  SUC.h  ServerSocket.cpp  ServerSocket.h  SocketUtility.h  SocketUtilityC++.vcxproj  SocketUtilityC++.vcxproj.filters  SucInternals.h  main.cpp
TestClient/: TestClient.vcxproj  TestClient.vcxproj.filters  main.cpp
TestServer/: TestServer.vcxproj  TestServer.vcxproj.filters  main.cpp
archive/: ByteBuffer.cpp
include/suc/: HttpServer.h  Internals.h  SocketUtility.h  SucInternals.h  async.h  client_socket.h  http_server.h  os.h  server_socket.h  suc.h  util.h
src/: Async.cpp  CMakeLists.txt  ClientSocket.cpp  Internals.cpp  ServerSocket.cpp  async.cpp  client_socket.cpp  http_server.cpp  os.cpp  server_socket.cpp
static_lib_project/StaticLibTest/: StaticLibTest.sln
static_lib_project/StaticLibTest/StaticLibTest/: StaticLibTest.vcxproj  main.cpp
static_lib_project/StaticLibTest/StaticLibTest/includes/: ClientSocket.h  ServerSocket.h  SocketUtility.h  suc.h
static_lib_project/SucStaticLib/: SucStaticLib.sln
static_lib_project/SucStaticLib/SucStaticLib/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  SocketUtility.h  SucByteBuffer.cpp  SucByteBuffer.h  SucInternals.h  SucStaticLib.cpp  SucStaticLib.vcxproj  SucStaticLib.vcxproj.filters  suc.h
test/: CMakeLists.txt  client_test.cpp  server_test.cpp
